# wave

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  package-lock.json  package.json
.github/workflows/: ci.yml  deploy.yml
.husky/: pre-push
backend/: .dockerignore  Cargo.toml  Dockerfile.lambda  Makefile  requirements.txt
backend/python/: bedrock_handler.py  handler.py  sagemaker_handler.py  voice_handler.py
backend/src/: bedrock.rs  lib.rs  sagemaker.rs  submission.rs  voice.rs
backend/tests/: test_handler.py  test_voice.py
dashboard/: Dockerfile  fly.toml  next.config.ts  package.json  pnpm-lock.yaml
dashboard/public/: resume.json
dashboard/src/app/: apple-icon.tsx  globals.css  icon.tsx  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx
dashboard/src/components/: AlignmentMatrix.tsx  ArchitectureDiagram.tsx  ChatWidget.tsx  CollapsibleNav.tsx  Footer.tsx  GlobalSearch.tsx  ProjectCard.tsx  ProvisioningGate.tsx  ScrollIndicator.tsx  SplashBanner.tsx  SubmissionStatus.tsx  SystemStatusCharts.tsx  ThemeToggle.tsx  VCardPanel.tsx  VoiceAgent.tsx  WhatsNew.tsx
dashboard/src/context/: app-status-context.tsx  provisioning-context.tsx
dashboard/src/data/: alignment.json  architecture.json  meta.json  projects.json
dashboard/src/lib/: crypto.ts  notify.ts  redis.ts
infra/: package-lock.json  package.json  tsconfig.json
infra/lib/: bedrock-stack.ts  sagemaker-stack.ts  submission-stack.ts  voice-stack.ts
payload/: resume.json
scripts/: build-lambdas.sh  sagemaker-scheduler.sh  submit.py  teardown-sagemaker.sh
(+17 files in other folders)
