[package]
name = "wave-backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "wave_backend"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1.11"

[dev-dependencies]
pyo3 = { version = "0.23", features = ["auto-initialize"] }
